--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Boolando</title>
 </head>
 <body>
     <!-- sezione main -->
+     <div class="container clearfix debug">
+         <div class="box">
+             <h2>1</h2>
+         </div>
+         <div class="box">
+            <h2>2</h2>
+        </div>
+        <div class="box">
+            <h2>3</h2>
+        </div>
+        <div class="box">
+            <h2>4</h2>
+        </div>
+        <div class="box">
+            <h2>5</h2>
+        </div>
+        <div class="box">
+            <h2>6</h2>
+        </div>
+
+     </div>
+
 </body>
 </html>
