--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 <body>
     <!-- sezione main -->
      <div class="container clearfix debug">
-         <div class="box">
-             <h2>1</h2>
+        <div class="box">
+            <img class="img-pag" src="./img/1.webp" alt="relaxed fit tee inisex">
          </div>
          <div class="box">
-            <h2>2</h2>
+            <img class="img-pag" src="./img/2.webp" alt="roses tee">
         </div>
         <div class="box">
-            <h2>3</h2>
+            <img class="img-pag" src="./img/3.webp" alt="colori pastello">
         </div>
         <div class="box">
-            <h2>4</h2>
+            <img class="img-pag" src="./img/4.webp" alt="levis tee unisex">
         </div>
         <div class="box">
-            <h2>5</h2>
+            <img class="img-pag" src="./img/5.webp" alt="stripe bodice">
         </div>
         <div class="box">
-            <h2>6</h2>
+            <img class="img-pag" src="./img/6.webp" alt="maglione black">
         </div>
 
      </div>
