--- a/index.html
+++ b/index.html
@@ -11,22 +11,33 @@
     <!-- sezione main -->
      <div class="container clearfix debug">
         <div class="box">
-            <img class="img-pag" src="./img/1.webp" alt="relaxed fit tee inisex">
+            <img class="img-pag" src="./img/1.webp" alt="tee inisex">
+            <img class="img-hover" src="./img/1b.webp" alt="relaxed fit">
          </div>
+
          <div class="box">
             <img class="img-pag" src="./img/2.webp" alt="roses tee">
-        </div>
+            <img class="img-hover" src="./img/2b.webp" alt="long skirt">
+         </div>
+
         <div class="box">
-            <img class="img-pag" src="./img/3.webp" alt="colori pastello">
+            <img class="img-pag" src="./img/3.webp" alt="colori pastello verde">
+            <img class="img-hover" src="./img/3b.webp" alt="pastelli marrone">
         </div>
+
         <div class="box">
             <img class="img-pag" src="./img/4.webp" alt="levis tee unisex">
+            <img class="img-hover" src="./img/4b.webp" alt="jacket">
         </div>
+
         <div class="box">
             <img class="img-pag" src="./img/5.webp" alt="stripe bodice">
+            <img class="img-hover" src="./img/5b.webp" alt="pochette">
         </div>
+
         <div class="box">
             <img class="img-pag" src="./img/6.webp" alt="maglione black">
+            <img class="img-hover" src="./img/6b.webp" alt="gonna marrone">
         </div>
 
      </div>
