--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;1,700&display=swap" rel="stylesheet">
     <title>Boolando</title>
 </head>
 <body>
@@ -13,31 +16,70 @@
         <div class="box">
             <img class="img-pag" src="./img/1.webp" alt="tee inisex">
             <img class="img-hover" src="./img/1b.webp" alt="relaxed fit">
-         </div>
+
+            <div>
+                <span class="marca-txt">Levi's</span>
+                <h3>relaxed fit tee unisex</h2>
+                <span class="prezzo-txt">14,99 €</span>
+                <span class="sconto-txt">29,99 €</span>
+            </div>
+        </div>
 
          <div class="box">
             <img class="img-pag" src="./img/2.webp" alt="roses tee">
             <img class="img-hover" src="./img/2b.webp" alt="long skirt">
-         </div>
+
+            <div>
+                <span class="marca-txt">Guess</span>
+                <h3>roses tee</h2>
+                <span class="prezzo-txt">20,99 €</span>
+                <span class="sconto-txt">29,99 €</span>
+            </div>
+        </div>
 
         <div class="box">
             <img class="img-pag" src="./img/3.webp" alt="colori pastello verde">
             <img class="img-hover" src="./img/3b.webp" alt="pastelli marrone">
+        
+            <div>
+                <span class="marca-txt">Come Zucchero Filato</span>
+                <h3>voglia di colori pastello</h2>
+                <span class="prezzo-txt">129,99 €</span>            
+            </div>
         </div>
 
         <div class="box">
             <img class="img-pag" src="./img/4.webp" alt="levis tee unisex">
             <img class="img-hover" src="./img/4b.webp" alt="jacket">
+            
+            <div>
+                <span class="marca-txt">Levi's</span>
+                <h3>tee unisex</h2>
+                <span class="prezzo-txt">14,99 €</span>
+                <span class="sconto-txt">29,99 €</span>
+            </div>
         </div>
 
         <div class="box">
             <img class="img-pag" src="./img/5.webp" alt="stripe bodice">
             <img class="img-hover" src="./img/5b.webp" alt="pochette">
+
+            <div>
+                <span class="marca-txt">Maya Deluxe</span>
+                <h3>stripe bodice</h2>
+                <span class="prezzo-txt">99,99 €</span>
+            </div>
         </div>
 
         <div class="box">
             <img class="img-pag" src="./img/6.webp" alt="maglione black">
             <img class="img-hover" src="./img/6b.webp" alt="gonna marrone">
+
+            <div>
+                <span class="marca-txt">Esprit</span>
+                <h3>maglione black</h2>
+                <span class="prezzo-txt">29,99 €</span>
+            </div>
         </div>
 
      </div>
