--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <!-- sezione main -->
      <div class="container clearfix debug">
         <div class="box">
+            <div class="preferito">
+                <span>&#9829;</span>
+            </div>
             <img class="img-pag" src="./img/1.webp" alt="tee inisex">
-            <img class="img-hover" src="./img/1b.webp" alt="relaxed fit">
-
+            <img class="img-hover" src="./img/1b.webp" alt="relaxed fit">            
             <div>
                 <span class="marca-txt">Levi's</span>
                 <h3>relaxed fit tee unisex</h2>
@@ -26,6 +28,9 @@
         </div>
 
          <div class="box">
+            <div class="preferito">
+                <span>&#9829;</span>
+            </div>
             <img class="img-pag" src="./img/2.webp" alt="roses tee">
             <img class="img-hover" src="./img/2b.webp" alt="long skirt">
 
@@ -38,6 +43,9 @@
         </div>
 
         <div class="box">
+            <div class="preferito">
+                <span>&#9829;</span>
+            </div>
             <img class="img-pag" src="./img/3.webp" alt="colori pastello verde">
             <img class="img-hover" src="./img/3b.webp" alt="pastelli marrone">
         
@@ -49,6 +57,9 @@
         </div>
 
         <div class="box">
+            <div class="preferito">
+                <span>&#9829;</span>
+            </div>
             <img class="img-pag" src="./img/4.webp" alt="levis tee unisex">
             <img class="img-hover" src="./img/4b.webp" alt="jacket">
             
@@ -61,6 +72,9 @@
         </div>
 
         <div class="box">
+            <div class="preferito">
+                <span>&#9829;</span>
+            </div>
             <img class="img-pag" src="./img/5.webp" alt="stripe bodice">
             <img class="img-hover" src="./img/5b.webp" alt="pochette">
 
@@ -72,6 +86,9 @@
         </div>
 
         <div class="box">
+            <div class="preferito">
+                <span>&#9829;</span>
+            </div>
             <img class="img-pag" src="./img/6.webp" alt="maglione black">
             <img class="img-hover" src="./img/6b.webp" alt="gonna marrone">
 
