--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 </head>
 <body>
     <!-- sezione main -->
-     <div class="container clearfix debug">
+     <div class="container clearfix ">
         <div class="box">
-            <div class="preferito">
+            <div class="etichetta">
+                <span class="et-sconto txt-etichetta">-50%</span>
+                <span class="et-sostenibilita txt-etichetta">Sostenibilità</span>
+            </div>
+
+            <div class="et-preferito">
                 <span>&#9829;</span>
             </div>
             <img class="img-pag" src="./img/1.webp" alt="tee inisex">
@@ -28,7 +33,10 @@
         </div>
 
          <div class="box">
-            <div class="preferito">
+            <div class="etichetta">
+                <span class="et-sconto txt-etichetta">-30%</span>
+            </div>
+            <div class="et-preferito">
                 <span>&#9829;</span>
             </div>
             <img class="img-pag" src="./img/2.webp" alt="roses tee">
@@ -43,7 +51,10 @@
         </div>
 
         <div class="box">
-            <div class="preferito">
+            <div class="etichetta">
+                <span class="et-sconto txt-etichetta">-30%</span>
+            </div>
+            <div class="et-preferito">
                 <span>&#9829;</span>
             </div>
             <img class="img-pag" src="./img/3.webp" alt="colori pastello verde">
@@ -57,7 +68,11 @@
         </div>
 
         <div class="box">
-            <div class="preferito">
+            <div class="etichetta">
+                <span class="et-sconto txt-etichetta">-50%</span>
+                <span class="et-sostenibilita txt-etichetta">Sostenibilità</span>
+            </div>
+            <div class="et-preferito">
                 <span>&#9829;</span>
             </div>
             <img class="img-pag" src="./img/4.webp" alt="levis tee unisex">
@@ -72,7 +87,7 @@
         </div>
 
         <div class="box">
-            <div class="preferito">
+            <div class="et-preferito">
                 <span>&#9829;</span>
             </div>
             <img class="img-pag" src="./img/5.webp" alt="stripe bodice">
@@ -86,7 +101,10 @@
         </div>
 
         <div class="box">
-            <div class="preferito">
+            <div class="etichetta">
+                <span class="et-sostenibilita txt-etichetta">Sostenibilità</span>
+            </div>
+            <div class="et-preferito">
                 <span>&#9829;</span>
             </div>
             <img class="img-pag" src="./img/6.webp" alt="maglione black">
